Fix [l10n] Add-on buttons are too narrow for localization

--- a/static/css/inline-selection.scss
+++ b/static/css/inline-selection.scss
@@ -332,18 +332,21 @@ $overlay-z-index: 9999999999;
   vertical-align: middle;
   z-index: 999999999;
 }
+.myshots-all-buttons-container {
+  position: absolute;
+  right: 25px;
+  top: 15px;
+  min-width: 136px;
+}
 
 .myshots-button {
   @extend .button;
   @extend .secondary;
   display: block;
-  padding: 0;
+  margin-bottom: 5px;
   font-family: sans-serif;
   pointer-events: all;
-  position: absolute;
-  right: 25px;
-  top: 15px;
-  width: 136px;
+  width: 100%;
 }
 
 .myshots-button-container {
@@ -365,18 +368,6 @@ $overlay-z-index: 9999999999;
 }
 
 /* end styleMyShotsButton test */
-
-.visible {
-  @extend .myshots-button;
-  pointer-events: all;
-  top: 60px;
-}
-
-.full-page {
-  @extend .myshots-button;
-  pointer-events: all;
-  top: 105px;
-}
 
 .myshots-text-pre {
   /* Data version of static/img/my-shots.svg */
